# photon-gun

./: Cargo.toml  LICENSE  build.rs  rust-toolchain.toml
.circleci/: config.yml
.github/workflows/: default.yml
example/: basic.toml  config.yml  test_duplicate_names.yml
example/scripts/: random.lua  test.lua  test_http_get.lua
proto/: photon_gun.proto
src/: config.rs  db.rs  healthcheck.rs  lib.rs  main.rs  webserver.rs
src/grpc/: mod.rs  util.rs
src/healthcheck/: basic.rs  luxury.rs  mod.rs
src/webserver/: checks.rs  mod.rs  summary.rs
