[package]
name = "photon-gun"
authors = ["Devon Tingley <dtingley@twilit.io>"]
description = "Lua-Scriptable HTTP Monitor."
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
rlua = "0.19.1"

tokio = {version = "1.17.0", features = ["rt","time","macros","signal"] }
hyper = { version = "0.14.18", features = ["http1","http2","client","server","tcp"] }
reqwest = { version = "0.11.10", features = ["blocking"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
serde_qs = "0.9.1"
serde_json = "1.0.79"

clap = { version = "3.1.6", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["postgres","runtime-tokio-rustls","chrono"] }
base64 = "0.13.0"

[dev-dependencies]
wiremock = "0.5.12"
rstest = "0.12.0"

[profile.release]
lto = true
strip = true
