[package]
name = "photon-gun"
authors = ["Devon Tingley <dtingley@twilit.io>"]
description = "Simple Healthcheck Monitor with a gRPC Interface"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photon-server"
path = "src/bin/server.rs"
test = false
bench = false

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tonic = "0.7.1"
prost = "0.10.1"
reqwest = "0.11.10"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

serde = { version = "1.0.136", features = ["derive"] }
serde_qs = "0.9.1"
serde_json = "1.0.79"

clap = { version = "3.1.6", features = ["derive"] }
sqlx = { version = "0.5.11", features = ["postgres","runtime-tokio-rustls","chrono"] }
tower-http = { version = "0.3.2", features = ["trace", "request-id"] }
tower = "0.4.12"

[dev-dependencies]
wiremock = "0.5.12"
rstest = "0.12.0"
http = "0.2.6"

[build-dependencies]
tonic-build = "0.7"

[profile.release]
lto = true
strip = true
