[package]
name = "photon-gun"
authors = ["Devon Tingley <dtingley@twilit.io>"]
description = "Simple Healthcheck Monitor with a gRPC Interface"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "photon-server"
path = "src/bin/server.rs"
test = false
bench = false

[[bin]]
name = "photon-agent"
path = "src/bin/agent.rs"
test = false
bench = false

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.8.3"
prost = "0.11.6"
reqwest = "0.11.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.0", features = ["v4"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_qs = "0.9.1"
serde_json = "1.0.79"
toml = "0.7.2"

clap = { version = "4.1.6", features = ["derive","env"] }
sqlx = { version = "0.6.2", features = ["postgres","runtime-tokio-rustls","chrono","uuid"] }
tower-http = { version = "0.3.5", features = ["auth","request-id","trace"] }
tower = "0.4.13"

[dev-dependencies]
wiremock = "0.5.12"
rstest = "0.12.0"
http = "0.2.6"

[build-dependencies]
tonic-build = "0.8.4"

[profile.release]
lto = true
strip = true
